[tool.poetry]
name = "dpp-conan"
version = "0.1.0"
description = "Conan package for DPP."
authors = ["AA1999 <arshia.aghaei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
conan = "^2.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
